--- a/package.json
+++ b/package.json
@@ -18,10 +18,6 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.0.2",
@@ -31,8 +27,12 @@
     "jquery": "^3.6.0",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.15",
+    "ng-multiselect-dropdown": "^0.3.4",
     "ngx-bootstrap": "^7.0.0",
-    "sweetalert2": "^11.1.2"
+    "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.2",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.6",
